compiler/tests/errortests/method-self-mut.txt
FILENAME:16:7: error: Mutability mismatch for 'self' argument in method 'set': expected 'mutable', but got 'immutable'.
    s.set();
      ^--
